<resources>
    <string name="app_name">VaxTrack</string>
    <string name="picker">Pick image</string>
    <string name="backend_url">http://192.168.1.17:3000</string>
    <string name="gender">Gender</string>
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="date_of_birth">Date of Birth</string>
    <string name="race">Race</string>
    <string name="email">Email</string>
    <string name="phone_number">Phone Number</string>
    <string name="home_street_address">Home Street Address</string>
    <string name="city">City</string>
    <string name="zip_code">Zip Code</string>
    <string name="channel_name">New Providers</string>
    <string name="channel_description">New providers are available.</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>